--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html, body{
   font-weight: bold;
   font-size: 64px;
   line-height: 77px;
-  color: #8C43C5;
+  color: #008ab3;
   margin:5px;
   text-align: center;
 }
@@ -47,7 +47,7 @@ html, body{
 .triangle{
   width: 100%;
   height: 60.1%;
-  background: #8C43C5;
+  background: #008ab3;
   clip-path: polygon(100% 0, 100% 100%, 50% 100%, 0 100%);
 
 }
@@ -90,7 +90,7 @@ html, body{
       font-weight: bold;
       font-size: 74px;
       line-height: 77px;
-      color: #8C43C5;
+      color: #008ab3;
       margin:20px;
       text-align: center;
     }
@@ -120,7 +120,7 @@ html, body{
     .triangle{
       width: 121%;
       height: 84.5%;
-      background: #8C43C5;
+      background: #008ab3;
       clip-path: polygon(100% 0, 100% 100%, 50% 100%, 0 100%);
 
     }
